Fix Infobanner path + 2k resolution cropping issue

--- a/src/components/InfoBanner/InfoBanner.css
+++ b/src/components/InfoBanner/InfoBanner.css
@@ -9,10 +9,12 @@
     gap: 12em;
     font-size: 18px;
 
-    background-image: url('../../../public/InfobannerBackground.svg');
+    background-image: url('/InfobannerBackground.svg');
     background-size: cover;
+    background-position: center;
+    background-repeat: repeat-x;
     width: 100%;
-    height: 500px;
+    height: 600px;
 }
 
 .info__banner__text {
@@ -75,5 +77,6 @@
 @media screen and (min-width: 1300px) {
     .info__banner {
         font-size: 25px;
+        background-size: contain;
     }
 }
